make hyperlinks more visible and be inserted correctly by repopull

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -28,3 +28,8 @@
   --ifm-color-primary-lightest: #4fddbf;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
+
+a {
+  color: var(--ifm-color-primary-lightest);
+  font-weight: 600;
+}
